# brainrotsim

./: .gitignore  CMakeLists.txt  Color.h  Entity.cpp  Entity.h  Keyboard.hpp  Layer.h  LineModes.h  Wall.h  audio.h  beeper.cpp  beeper.h  blendmodes.h  box.cpp  box.h  box.hpp  config.cpp  config.h  consts.h  main.cpp  main.h  renderer.h  simrenderer.cpp  simrenderer.h
libraries/math/: CMakeLists.txt  Vec2f.cpp  Vec2f.h
